2005-05-20  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/instrument-notation.itely: remove *Engraver.

	* Documentation/user/advanced-notation.itely: edit, rearrange.

2005-05-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-ps.scm (glyph-string): take cid? argument. Use
	findresource iso. findfont for CID CFF fonts.

	* VERSION (PACKAGE_NAME): release 2.5.25

	* ly/Welcome_to_LilyPond.ly: add  \version

2005-05-20  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/programming-interface.itely: move
	\displayMusic into its own section.

	* Documentation/user/basic-notation.itely: finish editing.

2005-05-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/file-path.cc (find): don't throw away file_name.dir, but
	append to it. Fixes \include with directories.

	* flower/include/file-path.hh (class File_path): don't derive from
	Array<String>.

	* flower/include/file-name.hh (class File_name): remove to_str0()

	* lily/hara-kiri-engraver.cc (acknowledge_grob): split
	Hara_kiri_engraver in separate file.

	* lily/slur-configuration.cc (score_encompass): oops, <? to min()
	translation went wrong. Fixes vertically translated slurs.

2005-05-19  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/basic-notaton.itely: editing.

2005-05-18  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/macros.itexi, basic-notation.itely:
	add @commonprop (commonly used properties) macro.

2005-05-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/Welcome_to_LilyPond.ly: talk about icon, not program.

	* scripts/lilypond-book.py (invokes_lilypond): new function
	(main): only run fontextract if invokes_lilypond() is true.

	* lily/function-documentation.cc (ly_add_function_documentation):
	duh, use !=

	* Documentation/topdocs/INSTALL.texi (Top): add MacOS command.

	* stepmake/aclocal.m4: remove kpathsea warning, change to OPTIONAL.

	* scm/lily.scm (running-from-gui?): lowercase Darwin.
